<resources>
    <string name="app_name">WeatherRecs</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example Temperature settings -->
    <string name="pref_header_temperature">Temperature settings</string>

    <string name="pref_temperature_scale">Change temperature scale</string>
    <string-array name="pref_temperature_unit">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string-array name="pref_temperature_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_hot_temperature">Change hot temperature</string>
    <string name="pref_default_hot_temperature">80</string>

    <string name="pref_cold_temperature">Change cold temperature</string>
    <string name="pref_default_cold_temperature">45</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example Alarm settings -->
    <string name="pref_header_alarm">Alarm settings</string>
    <string name="pref_set_alarm">Set an alarm</string>
    <string name="pref_change_alarm">Change existing alarm</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
