<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_temperature_unit"
        android:entryValues="@array/pref_temperature_values"
        android:key="list_preference_1"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_temperature_scale" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_hot_temperature"
        android:inputType="number"
        android:key="hot_temperature"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_hot_temperature" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_cold_temperature"
        android:inputType="number"
        android:key="cold_temperature"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_cold_temperature" />


</PreferenceScreen>
